// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`avatar > renders 128 px with magenta 1`] = `
<DocumentFragment>
  <div
    aria-label="Signed in - as Elizabeth"
    class="avatar avatar--128 avatar--magenta"
    role="img"
  >
    E
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{size:"128",color:"magenta",username:"Elizabeth",htmlInput:{"aria-label":"Signed in - as Elizabeth"},imagePlacement:"cover"}]),"src/tags/evo-avatar/index.marko_0_size_color_img_username_htmlInput_imagePlacement",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`avatar > renders defaults 1`] = `
<DocumentFragment>
  <div
    aria-label="Signed in - as Elizabeth"
    class="avatar avatar--teal"
    role="img"
  >
    E
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{color:"teal",username:"Elizabeth",htmlInput:{"aria-label":"Signed in - as Elizabeth"},imagePlacement:"cover"}]),"src/tags/evo-avatar/index.marko_0_size_color_img_username_htmlInput_imagePlacement",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`avatar > renders signed out 1`] = `
<DocumentFragment>
  <div
    aria-label="Signed out"
    class="avatar"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="icon icon--avatar-signed-out"
    >
      <symbol
        id="icon-avatar-signed-out"
        viewBox="0 0 40 40"
      >
        <circle
          cx="20"
          cy="20"
          fill="var(--color-background-secondary, #F7F7F7)"
          r="20"
        />
        <circle
          cx="20"
          cy="17.5"
          fill="var(--color-foreground-secondary, #707070)"
          r="8.333"
        />
        <path
          d="M7.67 35.748c2-4.84 6.767-8.248 12.33-8.248s10.33 3.407 12.33 8.249A19.914 19.914 0 0 1 20 40a19.914 19.914 0 0 1-12.33-4.252Z"
          fill="var(--color-foreground-secondary, #707070)"
        />
      </symbol>
      <use
        href="#icon-avatar-signed-out"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{"aria-label":"Signed out"},imagePlacement:"cover"},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",4,"src/tags/evo-avatar/index.marko_0_size_color_img_username_htmlInput_imagePlacement",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`avatar > renders with doggy as username 1`] = `
<DocumentFragment>
  <div
    aria-label="Signed in - as Elizabeth"
    class="avatar avatar--teal"
    role="img"
  >
    D
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{color:"teal",username:"doggy",htmlInput:{"aria-label":"Signed in - as Elizabeth"},imagePlacement:"cover"}]),"src/tags/evo-avatar/index.marko_0_size_color_img_username_htmlInput_imagePlacement",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`avatar > renders with robert as username 1`] = `
<DocumentFragment>
  <div
    aria-label="Signed in - as Elizabeth"
    class="avatar avatar--teal"
    role="img"
  >
    R
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{color:"teal",username:"robert",htmlInput:{"aria-label":"Signed in - as Elizabeth"},imagePlacement:"cover"}]),"src/tags/evo-avatar/index.marko_0_size_color_img_username_htmlInput_imagePlacement",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`avatar > renders with test as usernames 1`] = `
<DocumentFragment>
  <div
    aria-label="Signed in - as Elizabeth"
    class="avatar avatar--teal"
    role="img"
  >
    T
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{color:"teal",username:"test",htmlInput:{"aria-label":"Signed in - as Elizabeth"},imagePlacement:"cover"}]),"src/tags/evo-avatar/index.marko_0_size_color_img_username_htmlInput_imagePlacement",1];M._.w()
  </script>
</DocumentFragment>
`;
